# 4TierCodeCheck

./: .gitignore  BASELINE_COMPARISON.md  BASELINE_RESULTS.md  FEATURE_A_IMPROVEMENT_SUMMARY.md  FINAL_SUMMARY.md  F_AND_D_IMPROVEMENTS.md  HYBRID_FEATURE_A_v3.md  INITIAL_ASSESSMENT_REPORT.md  ORGANIZATION_SUMMARY.txt  README.md  RELEASE_STRUCTURE.md  SECURITY_REPORT.md  baseline_comprehensive_results.json  code_knot_detector.py  compare_all_tools.py  create_expanded_corpus.py  demo_hybrid_feature_a.py  dynamic_code_knot_analyzer.py  generate_comparison_report.py  generate_corpus.py  hybrid_feature_a_patch.py  implement_hybrid_feature_a.py  optimized_knot_analyzer.py  parallel_batch_analyzer.py  pyproject.toml  requirements.txt  run_baseline_comparison.py  run_full_comparison_61files.py  security_scan.sh  static_code_knot_analyzer.py  test_feature_a_final.py  test_feature_a_on_corpus.py  test_knot_detector.py  tool_comparison_results.json
benchmarks/: comparison_61files_results.json  run_full_comparison_61files.py
demos/: demo_hybrid_feature_a.py  unified_analyzer_demo.py
docs/: FINAL_COMPARISON_61FILES.md  HYBRID_FEATURE_A.md  README.md
legacy/: INITIAL_ASSESSMENT_REPORT.md  REFACTORING_SUMMARY.md  TOOL_COMPARISON_REPORT.md  baseline_results.json
src/: knot_detector_v3.py  optimized_knot_analyzer.py  parallel_batch_analyzer.py  static_code_knot_analyzer.py
test_corpus/: complex.py  duplicate.py  medium.py  simple.py
test_corpus_expanded/: complex_nested.py  complex_parser.py  complex_recursion.py  issues_long_function.py  issues_many_params.py  simple_dicts.py  (+6 more)
(+79 files in other folders)
