[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "4tiers-code-check"
version = "0.1.0"
description = "Experimental multi-tier heuristic code health analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "GitPython>=3.1",
]
keywords = ["static-analysis", "code-health", "git-analysis", "runtime-analysis", "heuristics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = [
  "knot_detector_v3",
  "static_code_knot_analyzer",
  "dynamic_code_knot_analyzer",
  "temporal_knot_detector",
  "parallel_batch_analyzer",
  "optimized_knot_analyzer",
  "unified_analyzer_demo",
]

[tool.pytest.ini_options]
addopts = "-q"
